# SlideSounds

./: .gitignore  README.md  ROADMAP.md  design-philosophy.md  enhanced-phonics-syllabus.md  index.html  ios-deploy.md  package.json  partCmvp.md  phase-d-plan.md  phase-e-summary.md  phonics-adventure-implementation-handoff.md  phonics-adventure-mvp-spec.md  pnpm-lock.yaml  sound-engine-strategy.md  speech-recognizer-feature.md  vite.config.ts
public/audio/: README.md
public/audio/phonemes/: phoneme-map.json
public/audio/words/: README.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: ios.rs  lib.rs  main.rs
src/components/: AnimalAvatar.tsx  LetterZone.tsx  PhonicsWord.tsx  ResetProgressDialog.tsx  ScrubTrack.tsx  ScrubWord.tsx  SpeakPromptCard.tsx  TutorialOverlay.tsx  WordImageReveal.tsx
src/components/dev/: ScrubDevPanel.tsx
src/data/: animals.ts  comprehensionChecks.ts  habitats.ts  phonemeMap.ts  wordAudioMetadata.ts  words.ts
src/hooks/: useAnimalState.ts  useAudioEngine.ts  usePhonemeAudio.ts  useScrubGesture.ts  useSpeechRecognizer.ts  useTutorialState.ts  useWordAudio.ts  useWordBlendAudio.ts  useWordScrubber.ts
src/lib/: phonicsMatching.ts  progressStorage.ts  wordAudioBuilder.ts  wordParser.ts
src/screens/: AnimalSelectScreen.tsx  CelebrationScreen.tsx  ComprehensionCheckScreen.tsx  HabitatSelectScreen.tsx  HomeScreen.tsx  LessonScreen.tsx
src/stores/: gameStore.ts
src/styles/: global.css  screens.css
src/types/: phoneme.ts  speech.d.ts  tauri-env.d.ts
